--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "moduleDetection": "force",
     "noEmit": false,
     "strict": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "sourceMap": true,
   },
   "include": ["src/**/*"],
 }
