--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@jwrunge/reflex",
+  "name": "@jwrunge/copper",
   "version": "1.0.0",
   "main": "dist/copper.iife.js",
   "type": "module",
+  "typings": "dist/copper.d.ts",
   "exports": {
     ".": "./dist",
     "./js": "./dist/copper.esm.js",
@@ -14,16 +15,11 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.5",
-    "bun-types": "latest",
-    "i": "^0.3.7",
-    "npm": "^10.2.4",
     "npm-run-all": "^4.1.5",
     "rollup": "^4.5.0",
     "terser": "^5.24.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
+    "typescript": "^5.0.0",
     "@rollup/plugin-terser": "^0.4.4"
   }
 }
