--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "strict": true,
     "outDir": "dist",
     "sourceMap": true,
+    "declaration": true
   },
-  "include": ["src/**/*"],
+  "files": ["src/index.ts"]
 }
