--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,6 @@
     "strict": true,
     "outDir": "dist",
     "sourceMap": true,
-    "declaration": true
   },
-  "files": ["src/index.ts"]
+  "files": ["src/index.client.ts", "src/index.http.ts", "src/index.unified.ts"]
 }
