--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "./ts": "./src/index.ts"
   },
   "scripts": {
+    "test.interactive": "sirv --port 5000 --dev true --single tests/interactive.html",
     "build": "rollup -c"
   },
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.5",
+    "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^4.5.0",
     "terser": "^5.24.0",
     "tslib": "^2.6.2",
     "typescript": "^5.0.0",
-    "@rollup/plugin-terser": "^0.4.4"
+    "serve-cli": "^0.2.0"
   }
 }
