--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "@jwrunge/copper",
-  "version": "1.0.0",
-  "main": "dist/copper.iife.js",
-  "type": "module",
-  "typings": "dist/copper.d.ts",
-  "exports": {
-    ".": "./dist",
-    "./js": "./dist/unified/copper.esm.js",
-    "./js/iife": "./dist/unified/copper.iife.js",
-    "./js/client": "./dist/client/copper.esm.js",
-    "./js/client/iife": "./dist/client/copper.iife.js",
-    "./js/http": "./dist/http/copper.esm.js",
-    "./js/http/iife": "./dist/http/copper.iife.js",
-    "./ts": "./src/index.ts"
-  },
-  "scripts": {
-    "build": "rollup -c",
-    "test.interactive": "sirv --port 5000 --dev true --single tests/interactive.iife/interactive.html",
-    "test.unit": "jest",
-    "test": "test.unit"
-  },
-  "devDependencies": {
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "jest": "^29.7.0",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^4.5.0",
-    "terser": "^5.24.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.0.0",
-    "serve-cli": "^0.2.0"
-  }
+    "name": "@jwrunge/copper",
+    "version": "1.0.0",
+    "main": "dist/copper.iife.js",
+    "type": "module",
+    "typings": "dist/copper.d.ts",
+    "exports": {
+        ".": "./dist",
+        "./ts": "./src/index.ts",
+        "./js": "./dist/unified/copper.esm.js",
+        "./js/iife": "./dist/unified/copper.iife.js",
+        "./js/client": "./dist/client/copper.esm.js",
+        "./js/client/iife": "./dist/client/copper.iife.js",
+        "./js/http": "./dist/http/copper.esm.js",
+        "./js/http/iife": "./dist/http/copper.iife.js"
+    },
+    "scripts": {
+        "build": "rollup -c",
+        "test.interactive": "sirv --port 5000 --dev true --single tests/interactive.iife/interactive.html",
+        "test.unit": "jest",
+        "test": "run-s test.unit",
+        "increment-patch": "node util/incrementPatchVersion.js",
+        "publish.no-increment": "run-s build test && npm publish",
+        "publish": "run-s build test && increment-patch && npm publish"
+    },
+    "devDependencies": {
+        "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-typescript": "^11.1.5",
+        "jest": "^29.7.0",
+        "npm-run-all": "^4.1.5",
+        "rollup": "^4.5.0",
+        "terser": "^5.24.0",
+        "tslib": "^2.6.2",
+        "typescript": "^5.0.0",
+        "serve-cli": "^0.2.0"
+    }
 }
