--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
         "jest": "^29.7.0",
         "npm-run-all": "^4.1.5",
         "rollup": "^4.5.0",
+        "sirv-cli": "^2.0.2",
         "terser": "^5.24.0",
         "tslib": "^2.6.2",
-        "typescript": "^5.0.0",
-        "serve-cli": "^0.2.0"
+        "typescript": "^5.0.0"
     }
 }
