Work on conditionals

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "ESNext"],
+    "lib": ["DOM", "DOM.iterable", "ESNext"],
     "module": "ESNext",
     "target": "ESNext",
     "moduleResolution": "bundler",
