Simplify, trim - under 4Kb

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "increment-patch": "node util/incrementPatchVersion.js",
         "publish.no-increment": "run-s build test && npm publish",
         "publish": "run-s build test && increment-patch && npm publish",
-        "test.gzip": "wsl gzip -c ./dist/unified/copper.esm.js > ./dist/unified/cu.gz"
+        "test.gzip": "wsl gzip -c ./dist/copper.js > ./dist/cu.gz"
     },
     "devDependencies": {
         "@rollup/plugin-terser": "^0.4.4",
