--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     },
     "scripts": {
         "build": "rollup -c",
-        "test.interactive": "sirv --port 5000 --dev true --single tests/interactive.iife/interactive.html",
-        "test.unit": "jest",
-        "test": "run-s test.unit",
+        "dev": "sirv --port 5000 --dev true --single tests/interactive.html",
         "increment-patch": "node util/incrementPatchVersion.js",
         "publish.no-increment": "run-s build test && npm publish",
         "publish": "run-s build test && increment-patch && npm publish",
@@ -27,7 +25,6 @@
     "devDependencies": {
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^11.1.5",
-        "jest": "^29.7.0",
         "npm-run-all": "^4.1.5",
         "rollup": "^4.5.0",
         "sirv-cli": "^2.0.2",
