--- a/package.json
+++ b/package.json
@@ -12,18 +12,14 @@
         "example": "npm run build & sirv tests --port 5000 --dev true ",
         "dev": "npm run build & sirv --port 5000 --dev true --single tests/interactive.html",
         "increment-patch": "node util/incrementPatchVersion.js",
-        "publish.no-increment": "run-s build test && npm publish",
-        "publish": "run-s build test && increment-patch && npm publish",
+        "publish.no-increment": "npm run build && npm run test && npm publish",
+        "publish": "npm run build && npm run test && increment-patch && npm publish",
         "test.gzip": "wsl gzip -c ./dist/copper.js > ./dist/cu.gz"
     },
     "devDependencies": {
         "@rollup/plugin-terser": "^0.4.4",
-        "@rollup/plugin-typescript": "^11.1.5",
-        "npm-run-all": "^4.1.5",
         "rollup": "^4.5.0",
         "sirv-cli": "^2.0.2",
-        "terser": "^5.24.0",
-        "tslib": "^2.6.2",
-        "typescript": "^5.0.0"
+        "terser": "^5.24.0"
     }
 }
