Cleanup - working in script tag and import

--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
     "version": "0.0.1",
     "main": "dist/copper.js",
     "exports": {
-        ".": {
-            "typed": "./src/index.ts",
-            "default": "./dist/copper.js"
-        },
+        ".": "./dist/copper.js",
         "./slim": "./dist/slim.copper.js",
         "./dev": "./dist/dev.copper.js"
     },
