Publish script update (prevent infinite loop)

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "dev": "npm run build & sirv --port 5000 --dev true --single tests/interactive.html",
         "version": "node ./util/updateVersion.js",
         "increment-patch": "node util/incrementPatchVersion.js",
-        "publish-npm": "npm run build && npm run increment-patch && npm publish",
+        "pub": "npm run build && npm run increment-patch && npm publish",
         "test.gzip": "wsl gzip -c ./dist/manifold.js > ./dist/cu.gz"
     },
     "devDependencies": {
