Back to working loops and templs

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "main": "dist/slim.mfld.js",
     "exports": {
         ".": {
-            "require": "./dist/slim.mfld.mod.cjs",
-            "import": "./dist/slim.mfld.mod.js",
+            "require": "./dist/mfld.cjs",
+            "import": "./dist/mfld.js",
             "types": "./dist/mfld.d.ts"
         },
         "./dev": {
-            "require": "./dist/dev/mfld.mod.cjs",
-            "import": "./dist/dev/mfld.mod.js",
+            "require": "./dist/dev.mfld.cjs",
+            "import": "./dist/dev.mfld.js",
             "types": "./dist/mfld.d.ts"
         }
     },
