--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
       "strict": true,
       "outDir": "dist",
       "sourceMap": true,
+      "declaration": true,
+      "declarationDir": "dist/types"
     },
     "files": ["src/index.ts"]
   }
