--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "sirv-cli": "^2.0.2",
         "terser": "^5.24.0",
         "typescript": "^5.4.5"
+    },
+    "dependencies": {
+        "ui-base": "^0.0.1"
     }
 }
