--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-    "name": "mfld",
-    "version": "0.3.4",
-    "main": "dist/slim.mfld.js",
-    "type": "module",
-    "types": "./dist/manifold.d.ts",
-    "scripts": {
-        "build": "rollup -c",
-        "example": "npm run build & sirv tests --port 5000 --dev true ",
-        "dev": "npm run build & sirv --port 5000 --dev true --single tests/interactive.html",
-        "pub": "npm run build && npm publish",
-        "test.gzip": "gzip -c ./dist/mfld.js > ./dist/cu.gz"
-    },
-    "devDependencies": {
-        "@rollup/plugin-terser": "^0.4.4",
-        "@rollup/plugin-typescript": "^12.1.1",
-        "rollup": "^4.28.0",
-        "sirv-cli": "^2.0.2",
-        "terser": "^5.36.0",
-        "typescript": "^5.7.2"
-    }
+  "name": "manifold-dev",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "typescript": "~5.6.2",
+    "vite": "^6.0.1"
+  }
 }
