--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,24 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "DOM.iterable", "ESNext"],
+    "target": "ES2020",
+    "useDefineForClassFields": true,
     "module": "ESNext",
-    "target": "ESNext",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true,
+
+    /* Bundler mode */
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": false,
+    "noEmit": true,
+
+    /* Linting */
     "strict": true,
-    "sourceMap": true
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedSideEffectImports": true
   },
-  "files": ["src/index.ts"]
+  "include": ["src"]
 }
