--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "manifold-dev",
+  "name": "manifold",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && node ./postBuildMinify.js",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "~5.6.2",
-    "vite": "^6.0.1"
+    "@types/node": "^22.10.1",
+    "terser": "^5.37.0",
+    "typescript": "~5.7.2",
+    "vite": "^6.0.3"
   }
 }
