Don't mangle top-level class props

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && node ./postBuildMinify.js",
+    "build": "tsc && vite build",
+    "minify": "node ./postBuildMinify.js",
     "preview": "vite preview"
   },
   "devDependencies": {
