--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
+    "globals": "^15.13.0",
     "terser": "^5.37.0",
     "typescript": "~5.7.2",
     "vite": "^6.0.3"
