--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@types/node": "^22.10.1",
-		"globals": "^15.13.0",
 		"terser": "^5.37.0",
 		"typescript": "~5.7.2",
-		"vite": "^6.0.3"
-	},
-	"dependencies": {
+		"vite": "^6.0.3",
+		"vitest": "^3.1.2",
 		"@biomejs/biome": "^1.9.4",
 		"biome-cfg": "github:jwrunge/biome-cfg"
 	}
