--- a/biome.json
+++ b/biome.json
@@ -1,1 +1,13 @@
-{"extends": ["biome-cfg"]}
+{
+  "extends": [
+    "biome-cfg"
+  ],
+
+  "linter": {
+    "rules": {
+      "correctness": {
+        "noUndeclaredVariables": "off"
+      }
+    }
+  }
+}
