Refactor, happy-dom mocking

--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"test": "vitest"
+		"test": "vitest --dom"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
 		"@types/node": "^22.10.1",
-		"terser": "^5.37.0",
+		"biome-cfg": "github:jwrunge/biome-cfg",
+		"happy-dom": "^17.4.6",
 		"typescript": "~5.7.2",
 		"vite": "^6.0.3",
-		"vitest": "^3.1.2",
-		"@biomejs/biome": "^1.9.4",
-		"biome-cfg": "github:jwrunge/biome-cfg"
+		"vitest": "^3.1.2"
 	}
 }
