--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,36 @@
 {
 	"compilerOptions": {
-		"lib": ["DOM", "DOM.iterable", "ESNext"],
-		"module": "ESNext",
-		"target": "ESNext",
-		"moduleResolution": "bundler",
-		"moduleDetection": "force",
-		"noEmit": true,
-		"strict": true,
-		"sourceMap": true
+		"target": "es2016",
+		"module": "commonjs",
+		// ... other options you might have ...
+
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+
+		// This is the most crucial part:
+		"strict": true, // <--- MAKE SURE THIS IS TRUE!
+
+		// If you prefer more granular control and don't want all of `strict: true` yet,
+		// at minimum, you'd want:
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"strictBindCallApply": true,
+		"strictPropertyInitialization": true,
+		"noImplicitThis": true,
+		"noUncheckedIndexedAccess": true, // This one is very important for index signatures
+		"allowUnusedLabels": false,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitOverride": true,
+		"noPropertyAccessFromIndexSignature": true, // Often helps catch things like this
+		"noUnusedLocals": true,
+		"noUnusedParameters": true
 	},
 	"include": [
 		// "src/**/*",
 		// "src/globals.d.ts"
 		"src/reactivity.ts",
-		"src/equalityCheck.ts"
+		"src/equality.ts",
+		"src/viewmodel.ts"
 	]
 }
