--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,11 +26,6 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true
 	},
-	"include": [
-		// "src/**/*",
-		// "src/globals.d.ts"
-		"src/reactivity.ts",
-		"src/equality.ts",
-		"src/viewmodel.ts"
-	]
+	"include": ["src/**/*"],
+	"exclude": ["src/tests/**/*"]
 }
