--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@types/node": "^22.10.1",
+		"jsdom": "^26.1.0",
 		"typescript": "~5.7.2",
 		"vite": "^6.0.3",
 		"vitest": "^3.1.2"
