--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
 	"compilerOptions": {
 		"target": "esnext",
-		"module": "commonjs",
+		"module": "esnext",
+		"moduleResolution": "bundler",
 		"lib": ["esnext", "dom"],
 		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"noImplicitAny": true,
