--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.4",
+		"terser": "^5.43.1",
 		"typescript": "~5.8.3",
 		"vite": "^7.1.2",
 		"vitest": "^3.2.4"
