--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,5 @@
 	},
 	"biome.lsp.bin": "node_modules/.bin/biome",
 	"biome.enabled": true,
-	"biome.requireConfiguration": true,
-	"biome.useServer": true
+	"biome.requireConfiguration": true
 }
