--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.4",
+		"esbuild": "^0.25.9",
 		"jsdom": "^26.1.0",
 		"typescript": "~5.8.3",
 		"vite": "^7.1.2",
