--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
+		"build:debug": "MF_DEBUG_BUILD=1 tsc && MF_DEBUG_BUILD=1 vite build",
 		"test": "vitest --run",
 		"test:watch": "vitest",
 		"lint": "biome check .",
